--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="h-full bg-slate-900">
   <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Vite + React</title>
+    <title>AtomicDEX + WASM</title>
   </head>
   <body class="h-full">
     <div class="h-full" id="root"></div>
